--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -28,6 +28,14 @@ body {
   /* background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f); */
   /* background: linear-gradient(135deg, #b33939, #992626);
    */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Set the minimum height of the viewport */
+  margin: 0;
+}
+
+main {
+  flex: 1;
 }
 
 .disabled {
@@ -69,27 +77,25 @@ ion-icon {
 
 /* log-in--message */
 .log-in--container {
+  /* height: 30rem; */
+  /* border: 1px solid #000; */
 
+  color: white;
+  background-color: rgba(212, 178, 140, 0.9);
+  /* border: 2px dashed black; */
 
- /* height: 30rem; */ 
- /* border: 1px solid #000; */
- 
- color: white;
-background-color: rgba(212, 178, 140, 0.9);
-/* border: 2px dashed black; */
+  width: 100%;
 
-width: 100%;
-
- position: absolute;
- top: 0;
- left: 0;
- right: 90%;
- transition: all 1.5s;
- z-index: 999;
- text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 90%;
+  transition: all 1.5s;
+  z-index: 999;
+  text-align: center;
 }
 
 .log-in--message {
- font-size: 3rem;
- margin: 0rem;
+  font-size: 3rem;
+  margin: 0rem;
 }
