--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -81,6 +81,7 @@ main {
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
+
 .store-product img {
   width: 100%;
   height: 15rem;
@@ -105,7 +106,7 @@ main {
   text-align: center;
 }
 
-.store-product a {
+.product-order {
   /* align-self: center; */
   text-align: center;
   border: 1px solid gray;
