--- a/views/product.hbs
+++ b/views/product.hbs
@@ -80,6 +80,11 @@
             <a href="#comment-submission-id" class="review-form--button">Add a review</a>
             <div class="review-comment--container">
               {{!-- <p> neka ovde budu komentari</p> --}}
+              <div class="unique-review--comment">
+                <p>User <span>26.8.2023</span></p>
+                <p>5 stars</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus iste odit itaque voluptate inventore dignissimos eaque excepturi error alias ratione, vel consequatur hic soluta incidunt aliquid pariatur qui? Atque, expedita.</p>
+              </div>
             </div>
           </div>
         </div>
