the user can now sort by brands

--- a/views/store.hbs
+++ b/views/store.hbs
@@ -25,28 +25,28 @@
       <button class="brends">Brends</button>
       <form class="grid-style brend-categories">
         <div>
-        <input type="checkbox" name="jadore" id="jadore" >
-        <label for="jadore">JadoreStandard</label>
+        <input type="checkbox" name="brand" id="jadore" value="Gucci" >
+        <a href="/store/brand/Gucci">Gucci</a>
         </div>
    <div>
-        <input type="checkbox" name="jadore" id="jadore" class="test-box">
-        <label for="jadore">JadorePremium</label>
+        <input type="checkbox" name="brand" id="jadore" class="test-box" value="Dior">
+        <a href="/store/brand/Dior">Dior</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">JadoreSuper</label>
+        <input type="checkbox" name="brand" id="jadore" value="Channel">
+        <a href="/store/brand/Channel">Channel</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">JadoreUltra</label>
+        <input type="checkbox" name="brand" id="jadore" value="Lanvin">
+        <a href="/store/brand/Lanvin">Lanvin</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="brand" id="jadore" value="Calvin Klein">
+        <a href="/store/brand/Calvin Klein">Calvin Klein</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="brand" id="jadore" value="Armani">
+        <a href="/store/brand/Armani">Armani</a>
         </div>
       </form>
     </div>
@@ -55,28 +55,28 @@
       <button class="aroma">Aroma</button>
       <form class="grid-style aroma-categories">
         <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Warm">
+        <a href="/store/aroma/warm">Warm</a>
         </div>
    <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Woody">
+        <a href="/store/aroma/woody">Woody</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Oriental">
+        <a href="/store/aroma/oriental">Oriental</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Summer">
+        <a href="/store/aroma/summer">Summer</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Winter">
+        <a href="/store/aroma/winter">Winter</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">Jadore</label>
+        <input type="checkbox" name="aroma" id="jadore" value="Nice">
+        <a href="/store/aroma/nice">Nice</a>
         </div>
       </form>
     </div>
@@ -129,7 +129,7 @@
     
      <div class="store-product">
        <a href="/store/product/{{this.id}}">
-      <img src={{this.ImageUrl}} alt="perfume">
+      <img src={{this.Image}} alt="perfume">
       </a>
       <div>
         <a href="/store/product/{{this.id}}">
