--- a/views/store.hbs
+++ b/views/store.hbs
@@ -56,27 +56,27 @@
       <form class="grid-style aroma-categories">
         <div>
         <input type="checkbox" name="aroma" id="jadore" value="Warm">
-        <a href="/store/aroma/warm">Warm</a>
+        <a href="/store/aroma/Warm">Warm</a>
         </div>
    <div>
         <input type="checkbox" name="aroma" id="jadore" value="Woody">
-        <a href="/store/aroma/woody">Woody</a>
+        <a href="/store/aroma/Woody">Woody</a>
         </div>
            <div>
         <input type="checkbox" name="aroma" id="jadore" value="Oriental">
-        <a href="/store/aroma/oriental">Oriental</a>
+        <a href="/store/aroma/Oriental">Oriental</a>
         </div>
            <div>
         <input type="checkbox" name="aroma" id="jadore" value="Summer">
-        <a href="/store/aroma/summer">Summer</a>
+        <a href="/store/aroma/Summer">Summer</a>
         </div>
            <div>
         <input type="checkbox" name="aroma" id="jadore" value="Winter">
-        <a href="/store/aroma/winter">Winter</a>
+        <a href="/store/aroma/Winter">Winter</a>
         </div>
            <div>
         <input type="checkbox" name="aroma" id="jadore" value="Nice">
-        <a href="/store/aroma/nice">Nice</a>
+        <a href="/store/aroma/Nice">Nice</a>
         </div>
       </form>
     </div>
@@ -85,28 +85,28 @@
       <button class="quantity">Quantity</button>
       <form class="grid-style quantity-categories">
         <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">1</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="1">
+        <a href="/store/quantity/1">1</a>
         </div>
    <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">2</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="2">
+        <a href="/store/quantity/2">2</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">5</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="5">
+        <a href="/store/quantity/5">5</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">10</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="10">
+        <a href="/store/quantity/10">10</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">15</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="15">
+        <a href="/store/quantity/15">15</a>
         </div>
            <div>
-        <input type="checkbox" name="jadore" id="jadore">
-        <label for="jadore">20</label>
+        <input type="checkbox" name="quanitity" id="jadore" value="20">
+        <a href="/store/quantity/20">20</a>
         </div>
       </form>
     </div>
